remove unused imports and minor syntactical improvements