@@ -7,6 +7,7 @@ import com.krekno.bookshopbackend.service.UserDetailsServiceImpl;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -21,7 +22,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import jakarta.servlet.DispatcherType;
-import java.util.Arrays;
+
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -37,7 +39,7 @@ public class WebSecurityConfig {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) {
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
     }
 
@@ -47,21 +49,25 @@ public class WebSecurityConfig {
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) {
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth ->
                         auth.dispatcherTypeMatchers(DispatcherType.ERROR).permitAll()
+                                // Admin-only endpoints
                                 .requestMatchers("/api/order/admin/**").hasAuthority(Role.ROLE_ADMIN.name())
-                                .requestMatchers("/api/books/delete/**").hasAuthority(Role.ROLE_ADMIN.name())
-                                .requestMatchers("/api/books/update/**").hasAuthority(Role.ROLE_ADMIN.name())
-                                .requestMatchers("/api/books/saveBook").hasAuthority(Role.ROLE_ADMIN.name())
+                                .requestMatchers(HttpMethod.POST, "/api/books/**").hasAuthority(Role.ROLE_ADMIN.name())
+                                .requestMatchers(HttpMethod.PATCH, "/api/books/**").hasAuthority(Role.ROLE_ADMIN.name())
+                                .requestMatchers(HttpMethod.DELETE, "/api/books/**").hasAuthority(Role.ROLE_ADMIN.name())
                                 .requestMatchers("/api/books/all/admin").hasAuthority(Role.ROLE_ADMIN.name())
-                                .requestMatchers("/api/books/**").permitAll()
+                                // Public endpoints
+                                .requestMatchers(HttpMethod.GET, "/api/books/**").permitAll()
+                                // Auth endpoints
                                 .requestMatchers("/api/auth/update").authenticated()
                                 .requestMatchers("/api/auth/me").authenticated()
                                 .requestMatchers("/api/auth/**").permitAll()
+                                // Authenticated endpoints
                                 .requestMatchers("/api/cart/**").authenticated()
                                 .requestMatchers("/api/order/**").authenticated()
                                 .anyRequest().authenticated()
@@ -75,9 +81,9 @@ public class WebSecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:8080"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:8080"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
